1999-06-28  Sven Neumann  <sven@gimp.org>
	    Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/plug_in.c: return a PDB_EXECUTION_ERROR if a procedure
	requested by a plugin doesn't exist.

	* plug-ins/helpbrowser/*: The GIMP Help Browser!
	Not yet built by default. You need GtkXmHTML to make it work.
	There is a Makefile.classic for testing it.

	* Makefile.am
	* configure.in
	* help/*: some sample help files. Subdirs are possible, too.

1999-06-28  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/plug_in.c (plug_in_callback): removed the check for
	gdisplay_active() returning NULL because it caused all extensions
	to be un-callable when no image was open.

Sun Jun 27 19:34:22 1999  ape@gandalf.spacetec.no  (Asbjorn Pettersen)

	* app/session.c (save_sessionrc): fp = fopen (filename, "wt");
	Open file sessionrc always in TEXT mode (for OS/2 and Winxx).

1999-06-26  Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/[all tool related files]
	* app/commands.c
	* app/disp_callbacks.c
	* app/gdisplay.c
	* app/gimage.c
	* app/interface.c: hopefully fixed the bugs that appeared with my
	last fix. And some more changes...

	- Slightly changed the conditions which cause the tools to be
	  re-initialized on button_press events and the global
	  initialisation functions.
	- The dialog tools now explicitly set tool->gdisp_ptr so they can
	  be properly hidden on display deletion.
	- Create the crop info dialog only once and avoid ugly redraw bugs
	  by blocking the sizeentries' signal when initializing them.
	- Standardized the tools_new_<tool>() functions. They are
	  scheduled to be moved to a common constructor in tools.c
	- Various stuff...

1999-06-26  Sven Neumann  <sven@gimp.org>
	    Michael Natterer  <mitschel@cs.tu-berlin.de>

	* app/app_procs.c
	* pixmap/eek.xpm: EEK. Some files unsaved. Quit the GIMP?

Fri Jun 25 22:09:04 BST 1999 Andy Thomas <alt@gimp.org>

	* lc_dialog.c

	Fixed problem when preview sizes are changed in L&C&P 